--- a/src/components/contactForm/ContactForm.css
+++ b/src/components/contactForm/ContactForm.css
@@ -49,6 +49,7 @@
   border-bottom-left-radius: 10px;
   font-family: "Inter", sans-serif;
   box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+  font-size: 1rem;
 }
 
 .sections {
