--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  background-color: #333333;
+  background-color: #333333 !important;
 }
 
 .galleryWrap .single {
